comit para subir archivo

--- a/index2.html
+++ b/index2.html
@@ -67,35 +67,66 @@
           </tr>
         </tbody>
       </table>
-      <ul>
-        <li type="disc">
-            Combina elementos reales y virtuales
-        </li>
-        <li type="disc">
-            Es interactiva en tiempo real
-        </li>
-        <li type="disc">
-            Está registrada en 3D.
-        </li>
-        <li type="disc">
-            realiza mediante un software
-        </li>
-        <li type="disc">
-            realidad mixta.
-        </li>
-        <li type="disc">
-            optimización de tareas y soporte remoto
-        </li>
-        <li type="disc">
-            geolocalización
-        </li>
-        <li type="disc">
-            machine learning
-        </li>
-        <li type="disc">
-            visión artificial
-        </li>
-    </ul>
+      
+        <ol>
+            <li type="I">
+                una pruena 
+            </li>
+            <li type="I">
+                una pruena 
+            </li>
+            <li type="I">
+                una pruena 
+            </li>
+            <li type="I">
+                una pruena 
+            </li>
+            <li type="I">
+                una pruena 
+            </li>
+            <li type="I">
+                una pruena 
+            </li>
+            <li type="I">
+                una pruena 
+            </li>
+            <li type="I">
+                una pruena 
+            </li>
+            <li type="I">
+                una pruena 
+            </li>
+            <li type="I">
+                <ul>
+                    <li type="disc">
+                        Combina elementos reales y virtuales
+                    </li>
+                    <li type="disc">
+                        Es interactiva en tiempo real
+                    </li>
+                    <li type="disc">
+                        Está registrada en 3D.
+                    </li>
+                    <li type="disc">
+                        realiza mediante un software
+                    </li>
+                    <li type="disc">
+                        realidad mixta.
+                    </li>
+                    <li type="disc">
+                        optimización de tareas y soporte remoto
+                    </li>
+                    <li type="disc">
+                        geolocalización
+                    </li>
+                    <li type="disc">
+                        machine learning
+                    </li>
+                    <li type="disc">
+                        visión artificial
+                    </li>
+            </li>
+        </ol>
     
   <label for="nombre">Nombre:</label>
   <input type="text" id="nombre" name="nombre"><br><br>
